rotate hidden and blurry tasks

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,9 +3,9 @@
         <div class="Tasks">
             <a routerLink="expanding-cards" class="each--task">Task #1</a>
             <a routerLink="progress-steps" class="each--task">Task #2</a>
-            <a href="" class="each--task">Task #3</a>
-            <a href="" class="each--task">Task #4</a>
-            <a href="" class="each--task">Task #5</a>
+            <a routerLink="rotating-navigation" class="each--task">Task #3</a>
+            <a routerLink="hidden-search" class="each--task">Task #4</a>
+            <a routerLink="blurry-loading" class="each--task">Task #5</a>
             <a href="" class="each--task">Task #6</a>
             <a href="" class="each--task">Task #7</a>
             <a href="" class="each--task">Task #8</a>
