--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,8 +6,8 @@
             <a routerLink="rotating-navigation" class="each--task">Task #3</a>
             <a routerLink="hidden-search" class="each--task">Task #4</a>
             <a routerLink="blurry-loading" class="each--task">Task #5</a>
-            <a href="" class="each--task">Task #6</a>
-            <a href="" class="each--task">Task #7</a>
+            <a routerLink="scroll-animation" class="each--task">Task #6</a>
+            <a routerLink="split-landing" class="each--task">Task #7</a>
             <a href="" class="each--task">Task #8</a>
             <a href="" class="each--task">Task #9</a>
             <a href="" class="each--task">Task #10</a>
