--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,49 +8,49 @@
             <a routerLink="blurry-loading" class="each--task">Task #5</a>
             <a routerLink="scroll-animation" class="each--task">Task #6</a>
             <a routerLink="split-landing" class="each--task">Task #7</a>
-            <a href="" class="each--task">Task #8</a>
-            <a href="" class="each--task">Task #9</a>
-            <a href="" class="each--task">Task #10</a>
-            <a href="" class="each--task">Task #11</a>
-            <a href="" class="each--task">Task #12</a>
-            <a href="" class="each--task">Task #13</a>
-            <a href="" class="each--task">Task #14</a>
-            <a href="" class="each--task">Task #15</a>
-            <a href="" class="each--task">Task #16</a>
-            <a href="" class="each--task">Task #17</a>
-            <a href="" class="each--task">Task #18</a>
-            <a href="" class="each--task">Task #19</a>
-            <a href="" class="each--task">Task #20</a>
-            <a href="" class="each--task">Task #21</a>
-            <a href="" class="each--task">Task #22</a>
-            <a href="" class="each--task">Task #23</a>
-            <a href="" class="each--task">Task #24</a>
-            <a href="" class="each--task">Task #25</a>
-            <a href="" class="each--task">Task #26</a>
-            <a href="" class="each--task">Task #27</a>
-            <a href="" class="each--task">Task #28</a>
-            <a href="" class="each--task">Task #29</a>
-            <a href="" class="each--task">Task #30</a>
-            <a href="" class="each--task">Task #31</a>
-            <a href="" class="each--task">Task #32</a>
-            <a href="" class="each--task">Task #33</a>
-            <a href="" class="each--task">Task #34</a>
-            <a href="" class="each--task">Task #35</a>
-            <a href="" class="each--task">Task #36</a>
-            <a href="" class="each--task">Task #37</a>
-            <a href="" class="each--task">Task #38</a>
-            <a href="" class="each--task">Task #39</a>
-            <a href="" class="each--task">Task #40</a>
-            <a href="" class="each--task">Task #41</a>
-            <a href="" class="each--task">Task #42</a>
-            <a href="" class="each--task">Task #43</a>
-            <a href="" class="each--task">Task #44</a>
-            <a href="" class="each--task">Task #45</a>
-            <a href="" class="each--task">Task #46</a>
-            <a href="" class="each--task">Task #47</a>
-            <a href="" class="each--task">Task #48</a>
-            <a href="" class="each--task">Task #49</a>
-            <a href="" class="each--task">Task #50</a>
+            <a routerLink="form-wave" class="each--task">Task #8</a>
+            <a routerLink="sound-board" class="each--task">Task #9</a>
+            <a routerLink="dad-jokes" class="each--task">Task #10</a>
+            <a routerLink="event-keycodes" class="each--task">Task #11</a>
+            <a routerLink="" class="each--task">Task #12</a>
+            <a routerLink="" class="each--task">Task #13</a>
+            <a routerLink="" class="each--task">Task #14</a>
+            <a routerLink="" class="each--task">Task #15</a>
+            <a routerLink="" class="each--task">Task #16</a>
+            <a routerLink="" class="each--task">Task #17</a>
+            <a routerLink="" class="each--task">Task #18</a>
+            <a routerLink="" class="each--task">Task #19</a>
+            <a routerLink="" class="each--task">Task #20</a>
+            <a routerLink="" class="each--task">Task #21</a>
+            <a routerLink="" class="each--task">Task #22</a>
+            <a routerLink="" class="each--task">Task #23</a>
+            <a routerLink="" class="each--task">Task #24</a>
+            <a routerLink="" class="each--task">Task #25</a>
+            <a routerLink="" class="each--task">Task #26</a>
+            <a routerLink="" class="each--task">Task #27</a>
+            <a routerLink="" class="each--task">Task #28</a>
+            <a routerLink="" class="each--task">Task #29</a>
+            <a routerLink="" class="each--task">Task #30</a>
+            <a routerLink="" class="each--task">Task #31</a>
+            <a routerLink="" class="each--task">Task #32</a>
+            <a routerLink="" class="each--task">Task #33</a>
+            <a routerLink="" class="each--task">Task #34</a>
+            <a routerLink="" class="each--task">Task #35</a>
+            <a routerLink="" class="each--task">Task #36</a>
+            <a routerLink="" class="each--task">Task #37</a>
+            <a routerLink="" class="each--task">Task #38</a>
+            <a routerLink="" class="each--task">Task #39</a>
+            <a routerLink="" class="each--task">Task #40</a>
+            <a routerLink="" class="each--task">Task #41</a>
+            <a routerLink="" class="each--task">Task #42</a>
+            <a routerLink="" class="each--task">Task #43</a>
+            <a routerLink="" class="each--task">Task #44</a>
+            <a routerLink="" class="each--task">Task #45</a>
+            <a routerLink="" class="each--task">Task #46</a>
+            <a routerLink="" class="each--task">Task #47</a>
+            <a routerLink="" class="each--task">Task #48</a>
+            <a routerLink="" class="each--task">Task #49</a>
+            <a routerLink="" class="each--task">Task #50</a>
         </div>
     </div>
 </div>
