--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,7 +12,7 @@
             <a routerLink="sound-board" class="each--task">Task #9</a>
             <a routerLink="dad-jokes" class="each--task">Task #10</a>
             <a routerLink="event-keycodes" class="each--task">Task #11</a>
-            <a routerLink="" class="each--task">Task #12</a>
+            <a routerLink="faq-collapse" class="each--task">Task #12</a>
             <a routerLink="" class="each--task">Task #13</a>
             <a routerLink="" class="each--task">Task #14</a>
             <a routerLink="" class="each--task">Task #15</a>
