--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -14,7 +14,7 @@
             <a routerLink="event-keycodes" class="each--task">Task #11</a>
             <a routerLink="faq-collapse" class="each--task">Task #12</a>
             <a routerLink="random-choice-picker" class="each--task">Task #13</a>
-            <a routerLink="" class="each--task">Task #14</a>
+            <a routerLink="animated-navigation" class="each--task">Task #14</a>
             <a routerLink="" class="each--task">Task #15</a>
             <a routerLink="" class="each--task">Task #16</a>
             <a routerLink="" class="each--task">Task #17</a>
