--- a/src/app/movie-app/movie-app.component.html
+++ b/src/app/movie-app/movie-app.component.html
@@ -1,1 +1,22 @@
-<p>movie-app works!</p>
+<div class="MovieApp--container">
+    <div class="header">
+        <h1 class="Title">Movie App #17</h1>
+        <input class="searcher" placeholder="Search" type="text" (change)="search($event)">
+    </div>
+    <div class="MovieApp--box">
+        <div class="movies--container">
+            <div class="each" *ngFor="let movie of movies">
+                <img class="movie-image" [src]="'https://image.tmdb.org/t/p/w1280' + movie.backdrop_path"
+                    alt="No Se Encontro La Imagen">
+                <div class="movie-intro">
+                    <h1 class="movie-title">{{ movie.original_title }}</h1>
+                    <div class="calification">{{ movie.vote_average }}</div>
+                </div>
+                <div class="overview">
+                    <h1 class="overview-title">Overview</h1>
+                    <p class="overview-text">{{ movie.overview }}</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
