--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -18,7 +18,7 @@
             <a routerLink="incrementing-counter" class="each--task">Task #15</a>
             <a routerLink="drink-water" class="each--task">Task #16</a>
             <a routerLink="movie-app" class="each--task">Task #17</a>
-            <a routerLink="" class="each--task">Task #18</a>
+            <a routerLink="background-slider" class="each--task">Task #18</a>
             <a routerLink="" class="each--task">Task #19</a>
             <a routerLink="" class="each--task">Task #20</a>
             <a routerLink="" class="each--task">Task #21</a>
