--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -20,10 +20,10 @@
             <a routerLink="movie-app" class="each--task">Task #17</a>
             <a routerLink="background-slider" class="each--task">Task #18</a>
             <a routerLink="theme-clock" class="each--task">Task #19</a>
-            <a routerLink="" class="each--task">Task #20</a>
-            <a routerLink="" class="each--task">Task #21</a>
-            <a routerLink="" class="each--task">Task #22</a>
-            <a routerLink="" class="each--task">Task #23</a>
+            <a routerLink="button-ripple" class="each--task">Task #20</a>
+            <a routerLink="Drag-N-Drop" class="each--task">Task #21</a>
+            <a routerLink="drawing-app" class="each--task">Task #22</a>
+            <a routerLink="kinetic-loader" class="each--task">Task #23</a>
             <a routerLink="" class="each--task">Task #24</a>
             <a routerLink="" class="each--task">Task #25</a>
             <a routerLink="" class="each--task">Task #26</a>
