--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -24,9 +24,9 @@
             <a routerLink="Drag-N-Drop" class="each--task">Task #21</a>
             <a routerLink="drawing-app" class="each--task">Task #22</a>
             <a routerLink="kinetic-loader" class="each--task">Task #23</a>
-            <a routerLink="" class="each--task">Task #24</a>
-            <a routerLink="" class="each--task">Task #25</a>
-            <a routerLink="" class="each--task">Task #26</a>
+            <a routerLink="content-placeholder" class="each--task">Task #24</a>
+            <a routerLink="sticky-navbar" class="each--task">Task #25</a>
+            <a routerLink="double-vertical-slider" class="each--task">Task #26</a>
             <a routerLink="" class="each--task">Task #27</a>
             <a routerLink="" class="each--task">Task #28</a>
             <a routerLink="" class="each--task">Task #29</a>
