--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -27,8 +27,8 @@
             <a routerLink="content-placeholder" class="each--task">Task #24</a>
             <a routerLink="sticky-navbar" class="each--task">Task #25</a>
             <a routerLink="double-vertical-slider" class="each--task">Task #26</a>
-            <a routerLink="" class="each--task">Task #27</a>
-            <a routerLink="" class="each--task">Task #28</a>
+            <a routerLink="toast-notification" class="each--task">Task #27</a>
+            <a routerLink="github-profiles" class="each--task">Task #28</a>
             <a routerLink="" class="each--task">Task #29</a>
             <a routerLink="" class="each--task">Task #30</a>
             <a routerLink="" class="each--task">Task #31</a>
