--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,35 +1,35 @@
 <div class="footer--container">
     <div class="footer--box">
         <div class="Tasks">
-            <a routerLink="expanding-cards" class="each--task">Task #1</a>
-            <a routerLink="progress-steps" class="each--task">Task #2</a>
-            <a routerLink="rotating-navigation" class="each--task">Task #3</a>
-            <a routerLink="hidden-search" class="each--task">Task #4</a>
-            <a routerLink="blurry-loading" class="each--task">Task #5</a>
-            <a routerLink="scroll-animation" class="each--task">Task #6</a>
-            <a routerLink="split-landing" class="each--task">Task #7</a>
-            <a routerLink="form-wave" class="each--task">Task #8</a>
-            <a routerLink="sound-board" class="each--task">Task #9</a>
-            <a routerLink="dad-jokes" class="each--task">Task #10</a>
-            <a routerLink="event-keycodes" class="each--task">Task #11</a>
-            <a routerLink="faq-collapse" class="each--task">Task #12</a>
-            <a routerLink="random-choice-picker" class="each--task">Task #13</a>
-            <a routerLink="animated-navigation" class="each--task">Task #14</a>
-            <a routerLink="incrementing-counter" class="each--task">Task #15</a>
-            <a routerLink="drink-water" class="each--task">Task #16</a>
-            <a routerLink="movie-app" class="each--task">Task #17</a>
-            <a routerLink="background-slider" class="each--task">Task #18</a>
-            <a routerLink="theme-clock" class="each--task">Task #19</a>
-            <a routerLink="button-ripple" class="each--task">Task #20</a>
-            <a routerLink="Drag-N-Drop" class="each--task">Task #21</a>
-            <a routerLink="drawing-app" class="each--task">Task #22</a>
-            <a routerLink="kinetic-loader" class="each--task">Task #23</a>
-            <a routerLink="content-placeholder" class="each--task">Task #24</a>
-            <a routerLink="sticky-navbar" class="each--task">Task #25</a>
-            <a routerLink="double-vertical-slider" class="each--task">Task #26</a>
-            <a routerLink="toast-notification" class="each--task">Task #27</a>
-            <a routerLink="github-profiles" class="each--task">Task #28</a>
-            <a routerLink="" class="each--task">Task #29</a>
+            <a routerLink="ExpandingCards" class="each--task">Task #1</a>
+            <a routerLink="ProgressSteps" class="each--task">Task #2</a>
+            <a routerLink="RotatingNavigation" class="each--task">Task #3</a>
+            <a routerLink="HiddenSearch" class="each--task">Task #4</a>
+            <a routerLink="BlurryLoading" class="each--task">Task #5</a>
+            <a routerLink="ScrollAnimation" class="each--task">Task #6</a>
+            <a routerLink="SplitLanding" class="each--task">Task #7</a>
+            <a routerLink="FormWave" class="each--task">Task #8</a>
+            <a routerLink="SoundBoard" class="each--task">Task #9</a>
+            <a routerLink="DadJokes" class="each--task">Task #10</a>
+            <a routerLink="EventKeyCodes" class="each--task">Task #11</a>
+            <a routerLink="FaqCollapse" class="each--task">Task #12</a>
+            <a routerLink="RandomChoicePicker" class="each--task">Task #13</a>
+            <a routerLink="AnimatedNavigation" class="each--task">Task #14</a>
+            <a routerLink="IncrementingCounter" class="each--task">Task #15</a>
+            <a routerLink="DrinkWater" class="each--task">Task #16</a>
+            <a routerLink="MovieApp" class="each--task">Task #17</a>
+            <a routerLink="BackgroundSlider" class="each--task">Task #18</a>
+            <a routerLink="ThemeClock" class="each--task">Task #19</a>
+            <a routerLink="ButtonRipple" class="each--task">Task #20</a>
+            <a routerLink="DragNDrop" class="each--task">Task #21</a>
+            <a routerLink="DrawingApp" class="each--task">Task #22</a>
+            <a routerLink="KineticLoader" class="each--task">Task #23</a>
+            <a routerLink="contentplaceholder" class="each--task">Task #24</a>
+            <a routerLink="StickyNavbar" class="each--task">Task #25</a>
+            <a routerLink="DoubleVerticalSlider" class="each--task">Task #26</a>
+            <a routerLink="ToastNotification" class="each--task">Task #27</a>
+            <a routerLink="GithubProfiles" class="each--task">Task #28</a>
+            <a routerLink="DoubleClickHeart" class="each--task">Task #29</a>
             <a routerLink="" class="each--task">Task #30</a>
             <a routerLink="" class="each--task">Task #31</a>
             <a routerLink="" class="each--task">Task #32</a>
