--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -30,8 +30,8 @@
             <a routerLink="ToastNotification" class="each--task">Task #27</a>
             <a routerLink="GithubProfiles" class="each--task">Task #28</a>
             <a routerLink="DoubleClickHeart" class="each--task">Task #29</a>
-            <a routerLink="" class="each--task">Task #30</a>
-            <a routerLink="" class="each--task">Task #31</a>
+            <a routerLink="AutoTextEffect" class="each--task">Task #30</a>
+            <a routerLink="PasswordGenerator" class="each--task">Task #31</a>
             <a routerLink="" class="each--task">Task #32</a>
             <a routerLink="" class="each--task">Task #33</a>
             <a routerLink="" class="each--task">Task #34</a>
