--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -32,7 +32,7 @@
             <a routerLink="DoubleClickHeart" class="each--task">Task #29</a>
             <a routerLink="AutoTextEffect" class="each--task">Task #30</a>
             <a routerLink="PasswordGenerator" class="each--task">Task #31</a>
-            <a routerLink="" class="each--task">Task #32</a>
+            <a routerLink="GoodCheapFast" class="each--task">Task #32</a>
             <a routerLink="" class="each--task">Task #33</a>
             <a routerLink="" class="each--task">Task #34</a>
             <a routerLink="" class="each--task">Task #35</a>
