--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -33,9 +33,9 @@
             <a routerLink="AutoTextEffect" class="each--task">Task #30</a>
             <a routerLink="PasswordGenerator" class="each--task">Task #31</a>
             <a routerLink="GoodCheapFast" class="each--task">Task #32</a>
-            <a routerLink="" class="each--task">Task #33</a>
-            <a routerLink="" class="each--task">Task #34</a>
-            <a routerLink="" class="each--task">Task #35</a>
+            <a routerLink="NotesApp" class="each--task">Task #33</a>
+            <a routerLink="AnimatedCountdown" class="each--task">Task #34</a>
+            <a routerLink="ImageCarousel" class="each--task">Task #35</a>
             <a routerLink="" class="each--task">Task #36</a>
             <a routerLink="" class="each--task">Task #37</a>
             <a routerLink="" class="each--task">Task #38</a>
