--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,6 +1,6 @@
 .footer--container {
     position: absolute;
-    bottom: -200%;
+    // bottom: -200%;
     width: 100%;
     display: flex;
     justify-content: center;
