--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -38,7 +38,7 @@
             <a routerLink="ImageCarousel" class="each--task">Task #35</a>
             <a routerLink="Hoverboard" class="each--task">Task #36</a>
             <a routerLink="Pokedex" class="each--task">Task #37</a>
-            <a routerLink="" class="each--task">Task #38</a>
+            <a routerLink="MobileTabNavigation" class="each--task">Task #38</a>
             <a routerLink="" class="each--task">Task #39</a>
             <a routerLink="" class="each--task">Task #40</a>
             <a routerLink="" class="each--task">Task #41</a>
