--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -39,10 +39,10 @@
             <a routerLink="Hoverboard" class="each--task">Task #36</a>
             <a routerLink="Pokedex" class="each--task">Task #37</a>
             <a routerLink="MobileTabNavigation" class="each--task">Task #38</a>
-            <a routerLink="" class="each--task">Task #39</a>
+            <a routerLink="PasswordBackground" class="each--task">Task #39</a>
             <a routerLink="" class="each--task">Task #40</a>
-            <a routerLink="" class="each--task">Task #41</a>
-            <a routerLink="" class="each--task">Task #42</a>
+            <a routerLink="VerifyAccountUi" class="each--task">Task #41</a>
+            <a routerLink="LiveUserFilter" class="each--task">Task #42</a>
             <a routerLink="" class="each--task">Task #43</a>
             <a routerLink="" class="each--task">Task #44</a>
             <a routerLink="" class="each--task">Task #45</a>
