--- a/src/app/pokedex/pokedex.component.html
+++ b/src/app/pokedex/pokedex.component.html
@@ -1,13 +1,18 @@
 <div class="Pokedex--container">
     <h1 class="Title">Pokedex #37</h1>
     <div class="Pokedex--box">
-        <div *ngFor="let pok of pokemons" class="card" [ngStyle]="{'background-color': pok.primaryColor}">
-            <div class="img-cont" [ngStyle]="{'background-color': 'rgb(255, 255, 255, .8)'}">
-                <img class="image" [src]="pok.image" alt="" [ngStyle]="{'filter': 'drop-shadow(0 0 5px black)'}">
+        <div *ngFor="let pok of pokemons; let i = index" class="card" (mouseover)="pokeEnter(i)"
+            (mouseout)="pokeLeave()">
+            <div class="back" [ngClass]="{'rot-cont': i===index}"
+                [ngStyle]="{'background-color': pok.primaryColor, 'box-shadow': i===index ? 'inset 0 0 10px rgba(255, 255, 255, 0.8)' : '0 0 10px rgba(0, 0, 0, 0.3)'}">
+                <div class="img-cont"
+                    [ngStyle]="{'background-color': 'rgb(255, 255, 255, .8)', 'overflow': i === index ? 'visible': 'hidden', 'box-shadow': i!==index ? 'inset 0 0 10px rgba(0, 0, 0, 0.5)': 'inset 0 0 100px '+ pok.primaryColor}">
+                </div>
+                <p class="id" [ngStyle]="{'background-color': pok.primaryColor}">{{pok.id}}</p>
+                <h1 class="name">{{pok.name}}</h1>
+                <p class="type">Type: {{pok.type}}</p>
             </div>
-            <p class="id" [ngStyle]="{'background-color': pok.primaryColor}">{{pok.id}}</p>
-            <h1 class="name">{{pok.name}}</h1>
-            <p class="type">Type: {{pok.type}}</p>
+            <img class="image" [ngClass]="{'anim': i === index}" [src]=" i === index ? pok.anim : pok.sprite" alt="">
         </div>
     </div>
 </div>
