--- a/src/app/expanding-cards/expanding-cards.component.scss
+++ b/src/app/expanding-cards/expanding-cards.component.scss
@@ -1,63 +1,63 @@
 .ExpandingCards--container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  font-family: "Muli", sans-serif;
+
+  .Title {
     width: 100%;
-    height: 100vh;
+    text-align: center;
+  }
+
+  .cards--container {
+    width: 100%;
     display: flex;
-    justify-content: center;
-    font-family: 'Muli', sans-serif;
 
-    .Title {
-        width: 100%;
-        text-align: center;
-    }
+    .panel {
+      display: flex;
+      align-items: end;
+      background-size: cover;
+      background-position: center;
+      width: 90px;
+      height: 600px;
+      border-radius: 100px;
+      margin-right: 20px;
+      cursor: pointer;
+      opacity: 1;
+      transition: all 0.7s ease-in 0.1s;
 
-    .cards--container {
-        width: 100%;
-        display: flex;
+      &:hover {
+        background-size: 1000px;
+        opacity: 0.9;
+        transition: all 0.7s ease-in 0.1s;
+      }
 
-        .panel {
-            display: flex;
-            align-items: end;
-            background-size: cover;
-            background-position: center;
-            width: 90px;
-            height: 600px;
-            border-radius: 100px;
-            margin-right: 20px;
-            cursor: pointer;
-            opacity: 1;
-            transition: all 0.7s ease-in 0.1s;
+      h3 {
+        margin-left: 45px;
+        color: white;
+        opacity: 0;
+        font-size: 24px;
+        font-weight: bold;
+        margin-bottom: 0;
 
-            &:hover {
-                background-size: 1000px;
-                opacity: .9;
-            }
-
-
-            h3 {
-                margin-left: 45px;
-                color: white;
-                opacity: 0;
-                font-size: 24px;
-                font-weight: bold;
-                margin-bottom: 0;
-
-                &:hover {
-                    font-size: 25px;
-                }
-            }
-
-            &.active {
-                opacity: 1;
-                width: 1000px;
-                border-radius: 50px;
-
-                h3 {
-                    opacity: 1;
-                    margin-bottom: 30px;
-                    transition: opacity 0.3s ease-in 0.1s, margin .3s ease-in 0.5s;
-                    display: block;
-                }
-            }
+        &:hover {
+          font-size: 25px;
         }
+      }
+
+      &.active {
+        opacity: 1;
+        width: 1000px;
+        border-radius: 50px;
+
+        h3 {
+          opacity: 1;
+          margin-bottom: 30px;
+          transition: opacity 0.3s ease-in 0.1s, margin 0.3s ease-in 0.5s;
+          display: block;
+        }
+      }
     }
+  }
 }
